# gke-cluster-demo

./: .envrc  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: destroy-logic.yml  gke-deploy.yml
ansible/: Makefile  ansible.cfg  gcp_ssh_proxy.sh  inventory.gcp.yaml  requirements.yml  test-ssh.yaml  test.yaml
app/: Dockerfile  entrypoint.sh  index.html  nginx.conf
docs/: blue-green-deployment.md  blue-green-quick-reference.md  github-actions-workflow-guide.md  kubernetes-deployment-guide.md  production-architecture-cloud-armor.md
kube/: Dockerfile  index.html  nginx.conf
kubernetes/: .envrc  Dockerfile  hello-world.yaml  hello-world2.yaml  index.html
manifests/: hello-world-backend-config.yaml  hello-world-deployment.yaml  hello-world-ingress.yaml  hello-world-managed-certificate.yaml  hello-world-networkpolicy.yaml  hello-world-service.yaml  kustomization.yaml
manifests/blue-green/: hello-world-deployment-blue.yaml  hello-world-deployment-green.yaml  hello-world-ingress.yaml  hello-world-networkpolicy.yaml  hello-world-ns.yaml  hello-world-service.yaml  kustomization.yaml
scripts/: blue-green-switch.sh  docker-image.sh  fetch-compute-instances.py  fetch-compute-instances.sh  fetch-ip.py  fetch-ip.sh  fetch_creds.sh  fwd-services.sh  image.sh  install-tools.py  install-tools.sh  update-kubeconfig.py  update-kubeconfig.sh  update-manifest-image.sh
terraform/: artifacts.tf  backend.tf  buckets.tf  buckets.tf.bak  certs.tf  cluster.tf  deployments.tf  deploys.tf  gke.tf  helm.tf  iam.tf  k8s_resources.tf  keys.tf  keys.tf.bak  locals.tf  logging.tf  main.tf  monitoring.tf  monitoring.tf.bak  network.tf  outputs.tf  providers.tf  roles.tf  secrets.tf  security.tf  ssl.tf  variables.tf  vault.tf  versions.tf  vpc.tf
