[project]
name = "eks-cluster-demo"
version = "0.1.0"
description = "Python scripts for EKS cluster management"
authors = [{name = "devops"}]
# requires-python = ">=3.9.2,<4.0"
requires-python = "=3.13.11"
dependencies = [
    "google-auth (>=2.48.0,<3.0.0)",
    "google-auth-oauthlib (>=0.4.6,<1.0.0)",
    "googleapis-common-protos (>=1.72.0,<2.0.0)",
    "google-cloud-compute (>=1.20.0,<2.0.0)",
    "cryptography (>=46.0.5,<47.0.0)",
    "checkov (>=3.2.502,<4.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"